# clawtouch-mcp

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE.zh-CN.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  TRADEMARKS.md  glama.json  llms-install.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
clawtouch_mcp/: __init__.py  __main__.py  bridge.py  cursor.py  keycodes.py  protocol.py  server.py
docs/: macos-setup.md  windows-setup.md
docs/assets/: README.md
examples/computer_use/: README.md  claude_demo.py  openai_cua_demo.py
examples/integrations/: INTEGRATIONS.md
tests/: __init__.py  conftest.py  test_bridge_key_byte_order.py  test_bridge_port_detection.py  test_composed_tool_failure_propagation.py  test_cross_repo_protocol.py  test_cursor.py  test_dispatch_jsonrpc.py  test_hid_batch.py  test_keycodes.py  test_move_convergence.py  test_move_ms_stepping.py  test_protocol.py  test_rate_limiter.py  test_release_on_idle.py  test_round5_audit_regression.py  test_round6_audit_regression.py  test_screen_detect.py  test_screenshot_backends.py  test_screenshot_overflow.py  test_self_interrupt_warn.py  test_server.py  test_stdio_integration.py  test_stdio_utf8_encoding.py  test_unavailable_bridge.py
