[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawtouch-mcp"
version = "0.2.3"
description = "MCP stdio server exposing HID mouse/keyboard tools backed by ClawTouch Pico hardware."
readme = "README.md"
# PEP 639: SPDX expression form (setuptools >= 77). Avoid the deprecated
# `license = { text = "MIT" }` table form and the legacy
# `License :: OSI Approved :: MIT License` classifier.
license = "MIT"
license-files = ["LICENSE", "LICENSE.zh-CN.md", "NOTICE", "TRADEMARKS.md"]
authors = [
    { name = "Tinqiao Technology", email = "support@tinqiao.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
]
# 关键字保留 openclaw / hermes — 目标用户搜这些 LLM agent 名也能找到
keywords = ["mcp", "hid", "clawtouch", "openclaw", "hermes", "claude", "agent", "tool-use"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
screenshot = ["mss>=9.0"]

[project.urls]
Homepage = "https://clawtouch.cn"
Source = "https://github.com/tinqiao-oss/clawtouch-mcp"
Issues = "https://github.com/tinqiao-oss/clawtouch-mcp/issues"
Changelog = "https://github.com/tinqiao-oss/clawtouch-mcp/blob/master/CHANGELOG.md"

[project.scripts]
clawtouch-mcp = "clawtouch_mcp.__main__:main"

[tool.setuptools.packages.find]
include = ["clawtouch_mcp*"]
