[build-system]
# Hatchling instead of setuptools — eliminates the egg-info legacy that
# put version-embedded paths (build/bdist.<platform>/wheel/<pkg>-<ver>-
# pyX.Y.egg-info) in the source tree, which broke fresh `pip install`
# on macOS once any prior `pip install -e .` or `python -m build` had
# polluted the working copy (FileNotFoundError on the stale path the
# new build no longer matches). Hatchling builds to an isolated temp
# tree, sdists default to `git ls-files` so .gitignore is automatically
# respected, and editable installs don't drop an egg-info on disk.
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "clawtouch-mcp"
version = "0.3.0"
description = "MCP stdio server exposing HID mouse/keyboard tools backed by ClawTouch Pico hardware."
readme = "README.md"
# PEP 639 SPDX expression form (modern packaging). Avoid the deprecated
# `license = { text = "MIT" }` table form and the legacy
# `License :: OSI Approved :: MIT License` classifier.
license = "MIT"
license-files = ["LICENSE", "LICENSE.zh-CN.md", "NOTICE", "TRADEMARKS.md"]
authors = [
    { name = "Tinqiao Technology", email = "support@tinqiao.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
]
# 关键字保留 openclaw / hermes — 目标用户搜这些 LLM agent 名也能找到
keywords = ["mcp", "hid", "clawtouch", "openclaw", "hermes", "claude", "agent", "tool-use"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
# Pillow is needed for DPI-aware resize (Retina screens) and JPEG encoding.
# Without it the screenshot tool falls back to raw PNG at physical resolution
# which overflows MCP client text buffers on high-DPI displays.
screenshot = ["mss>=10.2", "Pillow>=10.0"]

[project.urls]
Homepage = "https://clawtouch.cn"
Source = "https://github.com/tinqiao-oss/clawtouch-mcp"
Issues = "https://github.com/tinqiao-oss/clawtouch-mcp/issues"
Changelog = "https://github.com/tinqiao-oss/clawtouch-mcp/blob/master/CHANGELOG.md"

[project.scripts]
clawtouch-mcp = "clawtouch_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["clawtouch_mcp"]

[tool.hatch.build.targets.sdist]
# Defaults to `git ls-files`; we set this explicitly so the sdist
# contract is auditable from pyproject alone and survives a
# tarball-from-zip workflow where .git isn't present. build/, dist/,
# .pytest_cache/, *.egg-info/ are not in the list; __pycache__/ inside an
# included dir (e.g. examples/) is dropped by hatchling's default excludes
# (VCS-ignored paths + bytecode caches), not by the include list alone, so
# stale artefacts can't poison the release.
include = [
    "clawtouch_mcp/",
    "tests/",
    "docs/",
    "examples/",
    "README.md",
    "README.zh-CN.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "LICENSE",
    "LICENSE.zh-CN.md",
    "NOTICE",
    "TRADEMARKS.md",
    "pyproject.toml",
]
